Fix display of icon on mobile

--- a/_sass/layout/_layout.scss
+++ b/_sass/layout/_layout.scss
@@ -58,6 +58,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    width: fit-content;
     border-radius: 50%;
     padding: 1rem;
     background-color: $softred;
